--- a/classif.ipynb
+++ b/classif.ipynb
@@ -527,9 +527,12 @@
     "\n",
     "        if self.retList:\n",
     "            return phrase\n",
-    "        else:#rejoin into one text body in case want to do different tokenisation/one-hot later on\n",
+    "        \n",
+    "        #rejoin into one text body in case want to do different tokenisation/one-hot later on\n",
+    "        else:\n",
     "            return \" \".join(filter(None, phrase))\n",
-    "#subclass must implement this\n",
+    "        \n",
+    "    #subclass must implement this\n",
     "    def process_phrases(self):\n",
     "        raise NotImplementedError"
    ]
@@ -636,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,10 +648,11 @@
     "        self.corpus = corpus\n",
     "\n",
     "    def tfidf(self, max_features=10000, ngram_range=(1,2)):\n",
-    "        vectorizer = feature_extraction.text.TfidfVectorizer(max_features=max_features, ngram_range=ngram_range)\n",
-    "        vectorizer.fit(self.corpus)\n",
-    "        self.representation = vectorizer.transform(self.corpus)\n",
-    "        self.vocabulary = vectorizer.vocabulary_"
+    "        self.vectorizer = feature_extraction.text.TfidfVectorizer(max_features=max_features, ngram_range=ngram_range)\n",
+    "        self.vectorizer.fit(self.corpus)\n",
+    "\n",
+    "        self.representation = self.vectorizer.transform(self.corpus)\n",
+    "        self.vocabulary = self.vectorizer.vocabulary_"
    ]
   },
   {
@@ -661,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,9 +679,37 @@
     "        \n",
     "        if self.word_rep_choice == 'tfidf':\n",
     "            self.word_rep.tfidf()\n",
+    "            self.X_train = self.word_rep.representation\n",
     "\n",
-    "    def train(dataset):\n",
-    "        pass"
+    "        self.split_data()\n",
+    "    \n",
+    "    def split_data(self, label_index=-1):\n",
+    "        #get X and y dataframes - assumes label is last column\n",
+    "        self.X = self.dataset.pp_df.iloc[:, :label_index]\n",
+    "        self.y = self.dataset.pp_df.iloc[:, label_index]\n",
+    "\n",
+    "        #random split\n",
+    "        ss = model_selection.ShuffleSplit(n_splits=1, test_size=0.25, random_state=myseed)\n",
+    "        indexes = list(ss.split(self.X, self.y))\n",
+    "        train_set  = indexes[0][0]\n",
+    "        test_set  = indexes[0][1]\n",
+    "\n",
+    "        self.X_train = self.X.iloc[train_set, :]\n",
+    "        self.y_train = self.y.iloc[train_set]\n",
+    "        self.X_test = self.X.iloc[test_set, :]\n",
+    "        self.y_test = self.y.iloc[test_set]\n",
+    "\n",
+    "    def train(self, method='logistic_regression'):\n",
+    "        if method == 'naive_bayes':\n",
+    "            self.method = naive_bayes.MultinomialNB()\n",
+    "\n",
+    "        self.model = pipeline.Pipeline([(\"vectorizer\", self.word_rep.vectorizer),\n",
+    "                                        (\"classifier\", self.method)])\n",
+    "\n",
+    "        self.model[\"classifier\"].fit(self.X_train, self.y_train)\n",
+    "\n",
+    "    def predict(self):\n",
+    "        self.model.predict(self.X_test)"
    ]
   },
   {
@@ -779,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,11 +875,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "classifier_1 = Classifier(d, 'tfidf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'WordRep' object has no attribute 'vectorizer'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[57], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m classifier_1\u001b[39m.\u001b[39;49mtrain(\u001b[39m'\u001b[39;49m\u001b[39mnaive_bayes\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "Cell \u001b[0;32mIn[55], line 35\u001b[0m, in \u001b[0;36mClassifier.train\u001b[0;34m(self, method)\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[39mif\u001b[39;00m method \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mnaive_bayes\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m     33\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmethod \u001b[39m=\u001b[39m naive_bayes\u001b[39m.\u001b[39mMultinomialNB()\n\u001b[0;32m---> 35\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmodel \u001b[39m=\u001b[39m pipeline\u001b[39m.\u001b[39mPipeline([(\u001b[39m\"\u001b[39m\u001b[39mvectorizer\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mword_rep\u001b[39m.\u001b[39;49mvectorizer),\n\u001b[1;32m     36\u001b[0m                                 (\u001b[39m\"\u001b[39m\u001b[39mclassifier\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmethod)])\n\u001b[1;32m     38\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmodel[\u001b[39m\"\u001b[39m\u001b[39mclassifier\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mfit(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mX_train, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39my_train)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'WordRep' object has no attribute 'vectorizer'"
+     ]
+    }
+   ],
+   "source": [
+    "classifier_1.train('naive_bayes')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wr = classifier_1.word_rep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'WordRep' object has no attribute 'vectorizer'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[60], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m wr\u001b[39m.\u001b[39;49mvectorizer\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'WordRep' object has no attribute 'vectorizer'"
+     ]
+    }
+   ],
+   "source": [
+    "wr.vectorizer"
    ]
   },
   {
@@ -890,63 +974,6 @@
     "        output = \"\\n\".join([f\"{word} ({count})\" for (word, count) in most_common])\n",
     "\n",
     "    print(output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 most common tokens in dfSpam (with stopwords) - Spam emails:\n",
-      "\n",
-      "\"the\" (57403), \"_\" (52195), \"to\" (46435), \"and\" (38993), \"of\" (34897)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print_most_common_n(d.pos_word_counter, 5, \"dfSpam (with stopwords) - Spam emails\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20 most common tokens in dfSpam (stopwords removed) - non-Spam emails:\n",
-      "\n",
-      "_ (174714)\n",
-      "language (15162)\n",
-      "university (15135)\n",
-      "subject (14113)\n",
-      "1 (13936)\n",
-      "http (12953)\n",
-      "enron (12349)\n",
-      "com (11705)\n",
-      "e (11580)\n",
-      "2 (10140)\n",
-      "one (9584)\n",
-      "0 (9432)\n",
-      "00 (9220)\n",
-      "information (9021)\n",
-      "mail (8764)\n",
-      "www (8569)\n",
-      "would (8195)\n",
-      "10 (8140)\n",
-      "new (8067)\n",
-      "please (8060)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print_most_common_n(d2.neg_word_counter, 20, \"dfSpam (stopwords removed) - non-Spam emails\")"
    ]
   },
   {
@@ -1061,47 +1088,6 @@
    ],
    "source": [
     "d3.pos_word_counter.head(20).plot.bar()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ppBody\n",
-       "subject        6630\n",
-       "com            6141\n",
-       "email          5354\n",
-       "http           4930\n",
-       "free           4511\n",
-       "000            4127\n",
-       "mail           3959\n",
-       "please         3949\n",
-       "money          3929\n",
-       "get            3915\n",
-       "company        3898\n",
-       "information    3878\n",
-       "one            3670\n",
-       "business       3606\n",
-       "time           3371\n",
-       "report         3130\n",
-       "click          3111\n",
-       "www            3088\n",
-       "new            3087\n",
-       "order          2751\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d3.pos_word_counter.head(20)"
    ]
   },
   {
@@ -1307,61 +1293,8 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## TFIDF\n",
-    "\n",
-    "Work in Progress: running TFIDF to classify Email-Spam-Dataset"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\theco\\Documents\\Phishing-ML\\classif.ipynb Cell 31\u001b[0m in \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/theco/Documents/Phishing-ML/classif.ipynb#X42sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfeature_extraction\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtext\u001b[39;00m \u001b[39mimport\u001b[39;00m TfidfVectorizer\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/theco/Documents/Phishing-ML/classif.ipynb#X42sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m tfidf \u001b[39m=\u001b[39m TfidfVectorizer(sublinear_tf\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, min_df\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m, norm\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39ml2\u001b[39m\u001b[39m'\u001b[39m, encoding\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mlatin-1\u001b[39m\u001b[39m'\u001b[39m, ngram_range\u001b[39m=\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m), stop_words\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39menglish\u001b[39m\u001b[39m'\u001b[39m, max_features\u001b[39m=\u001b[39m\u001b[39m10000\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/theco/Documents/Phishing-ML/classif.ipynb#X42sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m features \u001b[39m=\u001b[39m tfidf\u001b[39m.\u001b[39mfit_transform(df\u001b[39m.\u001b[39mppBody)\u001b[39m.\u001b[39mtoarray()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "tfidf = TfidfVectorizer(sublinear_tf=True, min_df=5, norm='l2', encoding='latin-1', ngram_range=(1, 2), stop_words='english', max_features=10000)\n",
-    "features = tfidf.fit_transform(df.ppBody).toarray()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(18651, 10000)"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "features.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1371,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1390,11 +1323,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>ppBody</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1.0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>save up to 70 on life insurance why spend more...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1 fight the risk of cancer http www adclick ws...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.0</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1 fight the risk of cancer http www adclick ws...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4.0</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>adult club offers free membership instant acce...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5.0</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>i thought you might like these 1 slim down gua...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2601.0</th>\n",
+       "      <td>2600.0</td>\n",
+       "      <td>subject computationally intensive methods in q...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2602.0</th>\n",
+       "      <td>2601.0</td>\n",
+       "      <td>subject books a survey of american linguistics...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2603.0</th>\n",
+       "      <td>2602.0</td>\n",
+       "      <td>subject wecol 98 western conference on linguis...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2604.0</th>\n",
+       "      <td>2603.0</td>\n",
+       "      <td>subject euralex 98 revised programme euralex 9...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2605.0</th>\n",
+       "      <td>2604.0</td>\n",
+       "      <td>body label 0 subject great part time or summer...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>18651 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            id                                             ppBody label\n",
+       "1.0        0.0  save up to 70 on life insurance why spend more...     1\n",
+       "2.0        1.0  1 fight the risk of cancer http www adclick ws...     1\n",
+       "3.0        2.0  1 fight the risk of cancer http www adclick ws...     1\n",
+       "4.0        3.0  adult club offers free membership instant acce...     1\n",
+       "5.0        4.0  i thought you might like these 1 slim down gua...     1\n",
+       "...        ...                                                ...   ...\n",
+       "2601.0  2600.0  subject computationally intensive methods in q...     0\n",
+       "2602.0  2601.0  subject books a survey of american linguistics...     0\n",
+       "2603.0  2602.0  subject wecol 98 western conference on linguis...     0\n",
+       "2604.0  2603.0  subject euralex 98 revised programme euralex 9...     0\n",
+       "2605.0  2604.0  body label 0 subject great part time or summer...     0\n",
+       "\n",
+       "[18651 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "d.pp_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0       True\n",
+       "2.0       True\n",
+       "3.0       True\n",
+       "4.0       True\n",
+       "5.0       True\n",
+       "          ... \n",
+       "2601.0    True\n",
+       "2602.0    True\n",
+       "2603.0    True\n",
+       "2604.0    True\n",
+       "2605.0    True\n",
+       "Name: label, Length: 18651, dtype: bool"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.pp_df.iloc[:, -1] == y"
    ]
   },
   {
