--- a/classif.ipynb
+++ b/classif.ipynb
@@ -41,23 +41,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#data\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
+    "#utilities\n",
     "from functools import reduce\n",
     "from tqdm import tqdm\n",
-    "# from .autonotebook import tqdm as notebook_tqdm\n",
     "import itertools\n",
     "from collections import Counter\n",
     "import pickle\n",
     "import os\n",
     "import re\n",
+    "\n",
+    "# scikit\n",
     "from sklearn import feature_extraction, model_selection, naive_bayes, pipeline, manifold, preprocessing, metrics\n",
+    "\n",
+    "# word embeddings\n",
+    "import gensim\n",
+    "import gensim.downloader as gensim_api\n",
+    "\n",
+    "#graphing\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "#nltk\n",
+    "import nltk\n",
+    "from nltk.tokenize import RegexpTokenizer\n",
+    "from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "from nltk.stem import PorterStemmer\n",
+    "from nltk.corpus import stopwords as NLTK_STOP\n",
+    "import string"
    ]
   },
   {
@@ -229,21 +247,6 @@
     "# Preprocessing\n",
     "\n",
     "In avoidance of 'self-plagiarisation', much of the code for the `Dataset` class is adapted from my Text Processing Sentiment Analysis assignment. Code can be provided to markers on request"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#nltk\n",
-    "import nltk\n",
-    "from nltk.tokenize import RegexpTokenizer\n",
-    "from nltk.stem.wordnet import WordNetLemmatizer\n",
-    "from nltk.stem import PorterStemmer\n",
-    "from nltk.corpus import stopwords as NLTK_STOP\n",
-    "import string"
    ]
   },
   {
@@ -644,7 +647,10 @@
     "        self.vectorizer.fit(self.corpus)\n",
     "\n",
     "        self.representation = self.vectorizer.transform(self.corpus)\n",
-    "        self.vocabulary = self.vectorizer.vocabulary_"
+    "        self.vocabulary = self.vectorizer.vocabulary_\n",
+    "\n",
+    "    def w2v(self, w2v_model=\"word2vec-google-news-300\"):\n",
+    "        self.nlp = gensim_api.load(w2v_model)"
    ]
   },
   {
@@ -657,13 +663,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Classifier:\n",
     "    def __init__(self, dataset, word_rep_choice, bodyColumn='ppBody'):\n",
     "        self.dataset = dataset\n",
+    "        self.bodyColumn = bodyColumn\n",
     "\n",
     "        self.split_data()\n",
     "\n",
@@ -674,6 +681,8 @@
     "        if self.word_rep_choice == 'tfidf':\n",
     "            self.word_rep.tfidf()\n",
     "            self.X_train = self.word_rep.representation\n",
+    "        elif self.word_rep_choice == 'word2vec_base':\n",
+    "            self.word_rep.w2v()\n",
     "    \n",
     "    def split_data(self, label_index=-1):\n",
     "        #get X and y dataframes - assumes label is last column\n",
@@ -700,8 +709,8 @@
     "\n",
     "        self.model[\"classifier\"].fit(self.X_train, self.y_train)\n",
     "\n",
-    "    def predict(self, X, evaluate=False, labels=None):\n",
-    "        predicted = self.model.predict(X)\n",
+    "    def predict(self, data, evaluate=False, labels=None):\n",
+    "        predicted = self.model.predict(data[self.bodyColumn])\n",
     "\n",
     "        if evaluate:\n",
     "            if labels is None:\n",
@@ -876,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,197 +903,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Found input variables with inconsistent numbers of samples: [4663, 2]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[34], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m classifier_1\u001b[39m.\u001b[39;49mpredict(classifier_1\u001b[39m.\u001b[39;49mX_test, evaluate\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, labels\u001b[39m=\u001b[39;49mclassifier_1\u001b[39m.\u001b[39;49my_test)\n",
-      "Cell \u001b[0;32mIn[30], line 47\u001b[0m, in \u001b[0;36mClassifier.predict\u001b[0;34m(self, X, evaluate, labels)\u001b[0m\n\u001b[1;32m     45\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mMust supply labels option\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     46\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 47\u001b[0m         accuracy \u001b[39m=\u001b[39m metrics\u001b[39m.\u001b[39;49maccuracy_score(labels, predicted)\n\u001b[1;32m     48\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mModel accuracy: \u001b[39m\u001b[39m{\u001b[39;00maccuracy\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     50\u001b[0m \u001b[39mreturn\u001b[39;00m predicted\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/sklearn/utils/_param_validation.py:211\u001b[0m, in \u001b[0;36mvalidate_params.<locals>.decorator.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    205\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    206\u001b[0m     \u001b[39mwith\u001b[39;00m config_context(\n\u001b[1;32m    207\u001b[0m         skip_parameter_validation\u001b[39m=\u001b[39m(\n\u001b[1;32m    208\u001b[0m             prefer_skip_nested_validation \u001b[39mor\u001b[39;00m global_skip_validation\n\u001b[1;32m    209\u001b[0m         )\n\u001b[1;32m    210\u001b[0m     ):\n\u001b[0;32m--> 211\u001b[0m         \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    212\u001b[0m \u001b[39mexcept\u001b[39;00m InvalidParameterError \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m    213\u001b[0m     \u001b[39m# When the function is just a wrapper around an estimator, we allow\u001b[39;00m\n\u001b[1;32m    214\u001b[0m     \u001b[39m# the function to delegate validation to the estimator, but we replace\u001b[39;00m\n\u001b[1;32m    215\u001b[0m     \u001b[39m# the name of the estimator by the name of the function in the error\u001b[39;00m\n\u001b[1;32m    216\u001b[0m     \u001b[39m# message to avoid confusion.\u001b[39;00m\n\u001b[1;32m    217\u001b[0m     msg \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39msub(\n\u001b[1;32m    218\u001b[0m         \u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mparameter of \u001b[39m\u001b[39m\\\u001b[39m\u001b[39mw+ must be\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    219\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mparameter of \u001b[39m\u001b[39m{\u001b[39;00mfunc\u001b[39m.\u001b[39m\u001b[39m__qualname__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m must be\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    220\u001b[0m         \u001b[39mstr\u001b[39m(e),\n\u001b[1;32m    221\u001b[0m     )\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/sklearn/metrics/_classification.py:220\u001b[0m, in \u001b[0;36maccuracy_score\u001b[0;34m(y_true, y_pred, normalize, sample_weight)\u001b[0m\n\u001b[1;32m    154\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Accuracy classification score.\u001b[39;00m\n\u001b[1;32m    155\u001b[0m \n\u001b[1;32m    156\u001b[0m \u001b[39mIn multilabel classification, this function computes subset accuracy:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    216\u001b[0m \u001b[39m0.5\u001b[39;00m\n\u001b[1;32m    217\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    219\u001b[0m \u001b[39m# Compute accuracy for each possible representation\u001b[39;00m\n\u001b[0;32m--> 220\u001b[0m y_type, y_true, y_pred \u001b[39m=\u001b[39m _check_targets(y_true, y_pred)\n\u001b[1;32m    221\u001b[0m check_consistent_length(y_true, y_pred, sample_weight)\n\u001b[1;32m    222\u001b[0m \u001b[39mif\u001b[39;00m y_type\u001b[39m.\u001b[39mstartswith(\u001b[39m\"\u001b[39m\u001b[39mmultilabel\u001b[39m\u001b[39m\"\u001b[39m):\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/sklearn/metrics/_classification.py:84\u001b[0m, in \u001b[0;36m_check_targets\u001b[0;34m(y_true, y_pred)\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_check_targets\u001b[39m(y_true, y_pred):\n\u001b[1;32m     58\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Check that y_true and y_pred belong to the same classification task.\u001b[39;00m\n\u001b[1;32m     59\u001b[0m \n\u001b[1;32m     60\u001b[0m \u001b[39m    This converts multiclass or binary types to a common shape, and raises a\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     82\u001b[0m \u001b[39m    y_pred : array or indicator matrix\u001b[39;00m\n\u001b[1;32m     83\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 84\u001b[0m     check_consistent_length(y_true, y_pred)\n\u001b[1;32m     85\u001b[0m     type_true \u001b[39m=\u001b[39m type_of_target(y_true, input_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39my_true\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     86\u001b[0m     type_pred \u001b[39m=\u001b[39m type_of_target(y_pred, input_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39my_pred\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/sklearn/utils/validation.py:409\u001b[0m, in \u001b[0;36mcheck_consistent_length\u001b[0;34m(*arrays)\u001b[0m\n\u001b[1;32m    407\u001b[0m uniques \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39munique(lengths)\n\u001b[1;32m    408\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(uniques) \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m--> 409\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    410\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mFound input variables with inconsistent numbers of samples: \u001b[39m\u001b[39m%r\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m    411\u001b[0m         \u001b[39m%\u001b[39m [\u001b[39mint\u001b[39m(l) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m lengths]\n\u001b[1;32m    412\u001b[0m     )\n",
-      "\u001b[0;31mValueError\u001b[0m: Found input variables with inconsistent numbers of samples: [4663, 2]"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model accuracy: 0.9547501608406606\n"
      ]
     }
    ],
    "source": [
-    "classifier_1.predict(classifier_1.X_test, evaluate=True, labels=classifier_1.y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['1', '0'], dtype='<U5')"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "classifier_1.model.predict(classifier_1.X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>ppBody</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>25188.0</th>\n",
-       "      <td>25188</td>\n",
-       "      <td>subject sale to rhone poule meter 988078 i hav...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1144.0</th>\n",
-       "      <td>1143.0</td>\n",
-       "      <td>subject call for papers rocling content length...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1957.0</th>\n",
-       "      <td>1956.0</td>\n",
-       "      <td>subject tai studies i the first international ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4128.0</th>\n",
-       "      <td>4127.0</td>\n",
-       "      <td>url http boingboing net 85516609 date not supp...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10383.0</th>\n",
-       "      <td>10383</td>\n",
-       "      <td>subject depression body care dietary hair prot...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1847.0</th>\n",
-       "      <td>1846.0</td>\n",
-       "      <td>empti</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7388.0</th>\n",
-       "      <td>7388</td>\n",
-       "      <td>subject a permanent solution to penis enlargem...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3963.0</th>\n",
-       "      <td>3962.0</td>\n",
-       "      <td>url http www newsisfree com click 1 8381141 21...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>185.0</th>\n",
-       "      <td>184.0</td>\n",
-       "      <td>nationwide pc repairs and upgrades no call out...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1127.0</th>\n",
-       "      <td>1127</td>\n",
-       "      <td>subject we have low priced software coleman le...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4663 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             id                                             ppBody\n",
-       "25188.0   25188  subject sale to rhone poule meter 988078 i hav...\n",
-       "1144.0   1143.0  subject call for papers rocling content length...\n",
-       "1957.0   1956.0  subject tai studies i the first international ...\n",
-       "4128.0   4127.0  url http boingboing net 85516609 date not supp...\n",
-       "10383.0   10383  subject depression body care dietary hair prot...\n",
-       "...         ...                                                ...\n",
-       "1847.0   1846.0                                              empti\n",
-       "7388.0     7388  subject a permanent solution to penis enlargem...\n",
-       "3963.0   3962.0  url http www newsisfree com click 1 8381141 21...\n",
-       "185.0     184.0  nationwide pc repairs and upgrades no call out...\n",
-       "1127.0     1127  subject we have low priced software coleman le...\n",
-       "\n",
-       "[4663 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "classifier_1.X_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['0', '0', '0', ..., '0', '1', '1'], dtype='<U5')"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "classifier_1.model.predict(classifier_1.X_test['ppBody'])"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Exploratory Data Analysis\n",
-    "\n",
-    "Run some tests on the datasets from `Email-Spam-Dataset`:\n",
-    "- find most common words in spam/not spam emails - plot on histogram\n",
-    "- classify the sentiment of each email as positive/negative and see if there's a pattern in spam/not spam"
+    "predictions = classifier_1.predict(classifier_1.X_test, evaluate=True, labels=classifier_1.y_test)"
    ]
   },
   {
