WIP refactor, add WordRep class

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,13 @@
     "from nltk.stem.wordnet import WordNetLemmatizer\n",
     "from nltk.stem import PorterStemmer\n",
     "from nltk.corpus import stopwords as NLTK_STOP\n",
-    "import string"
+    "import string\n",
+    "\n",
+    "#spacy imports\n",
+    "import spacy\n",
+    "from spacy.tokenizer import Tokenizer\n",
+    "from spacy.lang.en import English\n",
+    "from spacy.lang.en.stop_words import STOP_WORDS as SPACY_STOP"
    ]
   },
   {
@@ -251,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,16 +272,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#spacy imports\n",
-    "import spacy\n",
-    "from spacy.tokenizer import Tokenizer\n",
-    "from spacy.lang.en import English\n",
-    "from spacy.lang.en.stop_words import STOP_WORDS as SPACY_STOP\n",
-    "\n",
     "#download spacy dataset\n",
     "#uncomment the line below if you get error \"Can't find model 'en_core_web_sm'\"\n",
     "# !python -m spacy download en_core_web_sm\n",
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,6 +529,10 @@
     "        \n",
     "    #subclass must implement this\n",
     "    def process_phrases(self):\n",
+    "        raise NotImplementedError\n",
+    "        \n",
+    "    #subclass must implement this\n",
+    "    def process_dataset(self):\n",
     "        raise NotImplementedError"
    ]
   },
@@ -542,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,23 +638,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "class WordRep:\n",
     "    def __init__(self, corpus):\n",
-    "        self.corpus = corpus\n",
+    "        self.corpus = corpus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TFIDF(WordRep):\n",
+    "    def __init__(self, corpus, max_features=10000, ngram_range=(1,2)):\n",
+    "        super().__init__(corpus)\n",
     "\n",
-    "    def tfidf(self, max_features=10000, ngram_range=(1,2)):\n",
     "        self.vectorizer = feature_extraction.text.TfidfVectorizer(max_features=max_features, ngram_range=ngram_range)\n",
     "        self.vectorizer.fit(self.corpus)\n",
     "\n",
     "        self.representation = self.vectorizer.transform(self.corpus)\n",
-    "        self.vocabulary = self.vectorizer.vocabulary_\n",
+    "        self.vocabulary = self.vectorizer.vocabulary_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Word2Vec(WordRep):\n",
+    "    def __init__(self, corpus, size=300, window=8, min_count=1, sg=1, iter=30):\n",
+    "        super().__init__(corpus)\n",
     "\n",
-    "    def w2v(self, w2v_model=\"word2vec-google-news-300\"):\n",
-    "        self.nlp = gensim_api.load(w2v_model)"
+    "        self.representation = gensim.models.word2vec.Word2Vec(self.corpus, size=size, window=window, min_count=min_count, sg=sg, iter=iter)"
    ]
   },
   {
@@ -663,26 +687,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Classifier:\n",
-    "    def __init__(self, dataset, word_rep_choice, bodyColumn='ppBody'):\n",
+    "    def __init__(self, dataset, word_rep, bodyColumn='ppBody'):\n",
     "        self.dataset = dataset\n",
     "        self.bodyColumn = bodyColumn\n",
     "\n",
     "        self.split_data()\n",
     "\n",
-    "        self.word_rep_choice = word_rep_choice\n",
-    "        self.train_corpus = self.X_train[bodyColumn]\n",
-    "        self.word_rep = WordRep(self.train_corpus)\n",
-    "        \n",
-    "        if self.word_rep_choice == 'tfidf':\n",
-    "            self.word_rep.tfidf()\n",
-    "            self.X_train = self.word_rep.representation\n",
-    "        elif self.word_rep_choice == 'word2vec_base':\n",
-    "            self.word_rep.w2v()\n",
+    "        self.word_rep = word_rep\n",
     "    \n",
     "    def split_data(self, label_index=-1):\n",
     "        #get X and y dataframes - assumes label is last column\n",
@@ -740,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,6 +897,28 @@
    "metadata": {},
    "source": [
     "# Instantiate Word Representations for each Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() got an unexpected keyword argument 'size'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m w2v_1 \u001b[39m=\u001b[39m Word2Vec(d\u001b[39m.\u001b[39;49mpp_df[\u001b[39m'\u001b[39;49m\u001b[39mppBody\u001b[39;49m\u001b[39m'\u001b[39;49m])\n",
+      "Cell \u001b[0;32mIn[17], line 5\u001b[0m, in \u001b[0;36mWord2Vec.__init__\u001b[0;34m(self, corpus, size, window, min_count, sg, iter)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, corpus, size\u001b[39m=\u001b[39m\u001b[39m300\u001b[39m, window\u001b[39m=\u001b[39m\u001b[39m8\u001b[39m, min_count\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, sg\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, \u001b[39miter\u001b[39m\u001b[39m=\u001b[39m\u001b[39m30\u001b[39m):\n\u001b[1;32m      3\u001b[0m     \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m(corpus)\n\u001b[0;32m----> 5\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrepresentation \u001b[39m=\u001b[39m gensim\u001b[39m.\u001b[39;49mmodels\u001b[39m.\u001b[39;49mword2vec\u001b[39m.\u001b[39;49mWord2Vec(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcorpus, size\u001b[39m=\u001b[39;49msize, window\u001b[39m=\u001b[39;49mwindow, min_count\u001b[39m=\u001b[39;49mmin_count, sg\u001b[39m=\u001b[39;49msg, \u001b[39miter\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39miter\u001b[39;49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'size'"
+     ]
+    }
+   ],
+   "source": [
+    "w2v_1 = Word2Vec(d.pp_df['ppBody'])"
    ]
   },
   {
